Add password reset functionality and support for ADMIN_PASSWORD environment variable

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,16 @@ TZ=America/New_York
 UVICORN_RELOAD=false
 
 # ==============================================================================
+# Password Recovery (PaaS-friendly)
+# ==============================================================================
+# Emergency password reset for when you're locked out
+# Set this variable and restart/redeploy to reset the admin password
+# Works with: Railway, Render, Fly.io, Docker, or any deployment
+#
+# IMPORTANT: Remove this variable after use for security
+# ADMIN_PASSWORD=yournewpassword
+
+# ==============================================================================
 # Future Feature Flags
 # ==============================================================================
 # Placeholder for future features:
