--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       # Password reset - set ADMIN_PASSWORD in .env to reset admin password
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-}
     healthcheck:
-      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8000/api/v1/status', timeout=5)"]
+      test: ["CMD", "python", "-c", "import httpx; httpx.get('http://localhost:8000/api/v1/status', timeout=5)"]
       interval: 30s
       timeout: 10s
       retries: 3
